[FE,BE,DOC] Show All History
