# myride/app/Http/Controllers/Api/HistoryApi/Queries.php
@@ -1,0 +1,102 @@
+<?php
+
+namespace App\Http\Controllers\Api\HistoryApi;
+use Illuminate\Http\Request;
+use Illuminate\Http\Response;
+use App\Http\Controllers\Controller;
+
+// Model
+use App\Models\HistoryModel;
+use App\Models\AdminModel;
+
+// Helper
+use App\Helpers\Generator;
+
+class Queries extends Controller
+{
+    /**
+     * @OA\GET(
+     *     path="/api/v1/history",
+     *     summary="Get all history",
+     *     description="This request is used to get all history when user use the App. This request is using MySql database, have a protected routes, and have template pagination.",
+     *     tags={"History"},
+     *     security={{"bearerAuth":{}}},
+     *     @OA\Response(
+     *         response=200,
+     *         description="history fetched",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="success"),
+     *             @OA\Property(property="message", type="string", example="history fetched"),
+     *             @OA\Property(property="data", type="object",
+     *                 @OA\Property(property="data", type="array",
+     *                     @OA\Items(
+     *                         @OA\Property(property="id", type="string", example="6f59235e-c398-8a83-2f95-3f1fbe95ca6e"),
+     *                         @OA\Property(property="history_type", type="string", example="Create"),
+     *                         @OA\Property(property="history_context", type="string", example="Barang bawaan"),
+     *                         @OA\Property(property="created_at", type="string", format="date-time", example="2024-09-20 22:53:47"),
+     *                         @OA\Property(property="created_by", type="string", example="2d98f524-de02-11ed-b5ea-0242ac120002")
+     *                     )
+     *                 ),
+     *             )
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=401,
+     *         description="protected route need to include sign in token as authorization bearer",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="failed"),
+     *             @OA\Property(property="message", type="string", example="you need to include the authorization token from login")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=404,
+     *         description="history failed to fetched",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="failed"),
+     *             @OA\Property(property="message", type="string", example="history not found")
+     *         )
+     *     ),
+     *     @OA\Response(
+     *         response=500,
+     *         description="Internal Server Error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="status", type="string", example="error"),
+     *             @OA\Property(property="message", type="string", example="something wrong. please contact admin")
+     *         )
+     *     ),
+     * )
+     */
+    public function getAllHistory(Request $request)
+    {
+        try{
+            $user_id = $request->user()->id;
+            $check_admin = AdminModel::find($user_id);
+            $paginate = $request->query('per_page_key') ?? 12;
+
+            if($check_admin){
+                $user_id = $request->query('user_id') ?? null;
+                $res = HistoryModel::getAllHistory('admin', $user_id, $paginate);
+            } else {
+                $res = HistoryModel::getAllHistory('user', $user_id, $paginate);
+            }
+            
+            if (count($res) > 0) {
+                return response()->json([
+                    'status' => 'success',
+                    'message' => Generator::getMessageTemplate("fetch", 'history'),
+                    'data' => $res
+                ], Response::HTTP_OK);
+            } else {
+                return response()->json([
+                    'status' => 'failed',
+                    'message' => $user_id,
+                ], Response::HTTP_NOT_FOUND);
+            }
+        } catch(\Exception $e) {
+            return response()->json([
+                'status' => 'error',
+                'message' => $e->getMessage(),
+            ], Response::HTTP_INTERNAL_SERVER_ERROR);
+        }
+    }
+}
