# myride/routes/web.php
@@ -14,6 +14,7 @@ use App\Http\Controllers\TripController;
 use App\Http\Controllers\AddTripController;
 use App\Http\Controllers\EmbedController;
 use App\Http\Controllers\ReminderController;
+use App\Http\Controllers\HistoryController;
 
 Route::prefix('/')->group(function () {
     Route::get('/', [WelcomeController::class, 'index'])->name('welcome');
@@ -46,6 +47,10 @@ Route::prefix('/trip')->middleware(['auth_v2:sanctum'])->group(function () {
 
 Route::prefix('/reminder')->middleware(['auth_v2:sanctum'])->group(function () {
     Route::get('/', [ReminderController::class, 'index'])->name('reminder');
+});
+
+Route::prefix('/history')->middleware(['auth_v2:sanctum'])->group(function () {
+    Route::get('/', [HistoryController::class, 'index'])->name('history');
 });
 
 Route::prefix('/stats')->middleware(['auth_v2:sanctum'])->group(function () {
